# python-project-template

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .versionrc  README.md  pyproject.toml
example_package/: __init__.py
